--- a/src/Pages/Login/style.css
+++ b/src/Pages/Login/style.css
@@ -8,3 +8,8 @@ input{
 input:hover{
     border: 1px solid rgb(103, 156, 236);
 }
+@media (max-width: 480px) {
+    input {
+        width: 100%;
+    }
+}
